frontend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: sentinelstack
spec:
  type: LoadBalancer
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 8080
