ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sentinelstack-ingress
  namespace: sentinelstack
  annotations:
    nginx.ingress.kubernetes.io/proxy-pass-headers: Authorization
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      # BACKEND FIRST (CRITICAL)
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 8000

      - path: /health
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 8000

      # FRONTEND LAST
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
